--- a/TermPaperHints/WrittingTermPaper.Rmd
+++ b/TermPaperHints/WrittingTermPaper.Rmd
@@ -6,7 +6,7 @@ output: beamer_presentation
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
-# Yes there is a term paper
+# Yes, there is a term paper
 
 + For most of you, this is a literature review.
 + You may, work in a team of three if you are doing an empirical paper.
@@ -40,6 +40,28 @@ Main purpose is to draw connections between publications that may not be obvious
     + Your paper may not be energy
 
 Think of the paper as a seed.  Your are going to grow a literature review from that paper.
+
+# Glance Through a Few Journals
+
++ Energy Economics http://www.journals.elsevier.com/energy-economics/
++ The Energy Journal https://www.jstor.org/journal/energyj
++ Resource and Energy Economics http://www.journals.elsevier.com/resource-and-energy-economics/
++ Energy: The International Journal  http://www.journals.elsevier.com/energy/ This has economics and engineering
++ Energy Policy http://www.journals.elsevier.com/energy-policy/
++ Utilities Policy (for more electricity focused reading) http://www.journals.elsevier.com/utilities-policy/
+
+
+# Spend a Few Minutes
+
++ Glance through a few editions.
++ Look for any special issues or collections.
++ See something that interests you?  Grab it. Open it.
+
+
+Alter URLs with this head to go through PSU library
+
+https://stats.lib.pdx.edu/proxy.php?url=https://www.sciencedirect.com/science/article/pii/S0140988317304413 or add .proxy.lib.pdx.edu after .com
+
 
 # Mine the bibliography
 
@@ -101,6 +123,7 @@ After high school, you don't just write a paper in one night, in one draft.  Tha
 + Break the habit.
 + It will work for a while, but the inability to manage a project that take more than a few days will limit you in life.
 
+McCloskey, D. (2000). Economical writing (Second ed.). Prospect Heights, Illinois: Waveland Press. Great book on how to write.
 
 # The Process
 
@@ -209,6 +232,39 @@ Solid outline
 # In the end
 
 Teach me something I would not have noticed by reading the individual papers.
+
+# Term Paper Dates and Details
+
++ “Writing Sample” assignment folder in D2L by _TODAY at 5pm_.
+
+
+Just a quick page and a bit with bibliography.  Looking for fluid writing and ability to cite works correctly.  If not great, you have earlier due dates to give more time later and go to writing center.
+
+# Topic Development
+
++  Authors and co-authors must publish an abstract, including a few key references, in the “Draft Abstracts” assignment folder in D2L by _October 18th (October 14th) at 5pm_. 
+
++ Students will schedule a 20 minute review meeting with the instructor the following week. Meetings must be completed by _October 23rd (October 20th) at 5pm_. Scope and depth changes will be agreed to in the meeting.
+
++ A revised abstract must be submitted by _October 28th (Oct 22) at 5pm_ in the “Revised Abstracts”
+assignment folder in D2L. 
+
+# Start Building the Paper
+
++  A reasonably complete annotated bibliography will be submitted in D2L by  _November 6th (October 30th)  at 5pm_ in the “Bibliography” assignment folder.  Here are some links on how to create an annotated bibliography, http://guides.library.cornell.edu/annotatedbibliography and               https://www.bethel.edu/library/research/apa-annobib-sixth.pdf 
+
++ Authors must schedule a 20-minute presentation to the class on data collection, design and analysis approach prior to completion of the draft paper.  Students conducting a literature review should schedule a similar session for a key papers in their literature review. These presentation will be scheduled completed by about _November 13th (November 6th)_ unless the author team wants to schedule something earlier.  
+
+# Getting the Paper Done
+
++ A draft of the paper must be published in the “Draft Papers” assignment folder in D2L by _November 19th  (November 12th) at 5 pm_.  Comments returned by November 23rd (November 16th) 8pm.  These comments will need to be addressed in the final paper. If you are writing an empirical paper, the submission should include a link to your data and the code used to analyze the data. 
+
+
+# Final Paper Just Like a Journal Article
+
++ The final paper must be published to the “Final Papers” assignment folder in D2L by _December 4th at 5pm_. Final drafts should be between 15 and 20 pages long, excluding major graphics and bibliography.  Literature review papers should have at least 15 peer reviewed or government publications as part of the review. The submission must include a separate document addressing the issues with the draft paper stating how the point is either irrelevant or how it is addressed in the paper.
+ 
+
 
 <!-- # Action -->
 
