--- a/SyllabusEnergyEcon.Rmd
+++ b/SyllabusEnergyEcon.Rmd
@@ -3,6 +3,7 @@ title: "Syllabus EC438/538 Fall 2020"
 author: "James Woods"
 date: ""
 output: pdf_document
+fontsize: 12pt
 ---
 
 ```{r setup, include=FALSE}
