Clean up of 2020 class

--- a/IntroToRegression/ReadingRegressions.Rmd
+++ b/IntroToRegression/ReadingRegressions.Rmd
@@ -2,8 +2,7 @@
 title: "Reading Regression Output Without Taking Econometrics"
 author: "James Woods"
 date: ''
-output:
-  beamer_presentation: default
+output: powerpoint_presentation
   
 
 ---
